removed feature flag (@WIP interpreter)